--- a/package.json
+++ b/package.json
@@ -3,55 +3,55 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.0",
-    "next-themes": "^0.4.3",
-    "server-only": "0.0.1",
+    "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-accordion": "^1.2.3",
-    "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-avatar": "^1.1.9",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-select": "^2.1.4",
+    "@radix-ui/react-label": "^2.1.6",
+    "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-separator": "^1.1.1",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-toast": "^1.2.6",
+    "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-toast": "^1.2.13",
+    "@tanstack/react-query": "^5",
     "autoprefixer": "10.4.20",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "@hookform/resolvers": "^4",
-    "react-use": "^17",
-    "ts-pattern": "^5",
-    "es-toolkit": "^1",
-    "lucide-react": "^0.469.0",
-    "zod": "^3",
-    "zustand": "^4",
     "date-fns": "^4",
-    "react-hook-form": "^7",
-    "@tanstack/react-query": "^5",
+    "es-toolkit": "^1",
     "framer-motion": "^11",
-    "axios": "^1.7.9"
+    "lucide-react": "^0.469.0",
+    "next": "15.1.0",
+    "next-themes": "^0.4.6",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.4",
+    "react-use": "^17",
+    "recharts": "^2.15.3",
+    "server-only": "0.0.1",
+    "ts-pattern": "^5",
+    "zod": "^3.25.7",
+    "zustand": "^4"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.1.4",
+    "@types/react-dom": "^19.1.5",
     "eslint": "^9",
     "eslint-config-next": "15.1.0",
-    "@eslint/eslintrc": "^3",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "tailwind-merge": "^2.5.2",
+    "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
-    "@tailwindcss/typography": "^0.5.10"
+    "typescript": "^5"
   }
 }
