--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lucide-react": "^0.469.0",
     "next": "15.1.0",
     "next-themes": "^0.4.6",
+    "openai": "^4.100.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
